{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 59,
  "lineage": "b639c43e-c9fe-6906-545a-4dc505f0c7b4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596917627629:vpc/vpc-04c79016177929144",
            "cidr_block": "10.0.0.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-055f55e795ca20b12",
                "cidr_block": "10.0.0.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-70bfa917",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04c79016177929144",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a85178cf5fb781e3",
            "owner_id": "596917627629",
            "tags": {
              "Name": "sej-dfa-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.service-hasura",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596917627629:security-group/sg-09212320fc052cf67",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09212320fc052cf67",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "gy-hasura-sg-task",
            "name_prefix": "",
            "owner_id": "596917627629",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c79016177929144"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service-main",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596917627629:security-group/sg-057d3d3671539cfcc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057d3d3671539cfcc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "gy-main-sg-task",
            "name_prefix": "",
            "owner_id": "596917627629",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c79016177929144"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service-virtual-gateway",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596917627629:loadbalancer/net/gojoy-app-lb/793f82b1ca609596",
            "arn_suffix": "net/gojoy-app-lb/793f82b1ca609596",
            "dns_name": "gojoy-app-lb-793f82b1ca609596.elb.ap-southeast-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:596917627629:loadbalancer/net/gojoy-app-lb/793f82b1ca609596",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "gojoy-app-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b8137edef1a8fb3d"
              },
              {
                "subnet_id": "subnet-0fb70f5227a9fb003"
              }
            ],
            "subnets": [
              "subnet-0b8137edef1a8fb3d",
              "subnet-0fb70f5227a9fb003"
            ],
            "vpc_id": "vpc-04c79016177929144",
            "zone_id": "ZKVM4W9LS7TM"
          },
          "dependencies": [
            "data.aws_subnet_ids.vpc_subnet",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.service-virtual-gateway",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596917627629:listener/net/gojoy-app-lb/793f82b1ca609596/a16fe35f7d73971a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596917627629:targetgroup/gojoy-app-tg/edf404f20af93071",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:596917627629:listener/net/gojoy-app-lb/793f82b1ca609596/a16fe35f7d73971a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596917627629:loadbalancer/net/gojoy-app-lb/793f82b1ca609596",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.vpc_subnet",
            "data.aws_vpc.vpc",
            "module.service-virtual-gateway.aws_lb.main",
            "module.service-virtual-gateway.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.service-virtual-gateway",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:596917627629:targetgroup/gojoy-app-tg/edf404f20af93071",
            "arn_suffix": "targetgroup/gojoy-app-tg/edf404f20af93071",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "8080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:596917627629:targetgroup/gojoy-app-tg/edf404f20af93071",
            "lambda_multi_value_headers_enabled": false,
            "name": "gojoy-app-tg",
            "port": 8080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04c79016177929144"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service-virtual-gateway",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596917627629:security-group/sg-0faa7b57dda632fcb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0faa7b57dda632fcb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gojoy-app-sg-lb",
            "name_prefix": "",
            "owner_id": "596917627629",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c79016177929144"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service-virtual-gateway",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596917627629:security-group/sg-0515fa99d36571b54",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0515fa99d36571b54",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "gojoy-app-vgateway-sg-task",
            "name_prefix": "",
            "owner_id": "596917627629",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c79016177929144"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}